feat: update some styles

--- a/NoDecentDiary/Pages/MinePage.razor
+++ b/NoDecentDiary/Pages/MinePage.razor
@@ -163,7 +163,7 @@
                     </MListItemIcon>
                     <MListItemContent>
                         <MListItemTitle>
-                            @(item.Name)
+                            @(item.Text)
                         </MListItemTitle>
                     </MListItemContent>
                 </MListItem>
