--- a/NoDecentDiary/Pages/UserPage.razor
+++ b/NoDecentDiary/Pages/UserPage.razor
@@ -12,7 +12,7 @@
             <MListItem OnClick="()=>ShowAvatar=true">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-account-circle
+                        mdi-account-circle-outline
                     </MIcon>
                 </MListItemIcon>
 
@@ -93,10 +93,10 @@
             </MButton>
         </MCardTitle>
         <MCardText>
-            <MListItem OnClick="PickPhoto">
+            <MListItem Class="px-0" OnClick="PickPhoto">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-image-multiple-outline
+                        mdi-image-outline
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
@@ -105,10 +105,10 @@
                     </MListItemTitle>
                 </MListItemContent>
             </MListItem>
-            <MListItem OnClick="OnCapture">
+            <MListItem Class="px-0" OnClick="OnCapture">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-camera
+                        mdi-camera-outline
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
