--- a/NoDecentDiary/wwwroot/css/app.css
+++ b/NoDecentDiary/wwwroot/css/app.css
@@ -100,6 +100,10 @@ a, .btn-link {
     display: none; /*去除滚动条*/
 }
 
+.m-tab-swiper {
+    text-transform: none !important;
+}
+
 .m-tab-swiper::before {
     opacity: 0 !important;
 }
