--- a/NoDecentDiary/Pages/WritePage.razor
+++ b/NoDecentDiary/Pages/WritePage.razor
@@ -64,7 +64,7 @@
     </div>
     <div class="px-2">
         <MChip Class="my-2 mr-2"
-               Outlined="Mobile"
+               Outlined
                OnClick="()=>ShowWeather=true">
             <MIcon Left>
                 @(GetWeatherIcon(Diary.Weather))
@@ -72,7 +72,7 @@
             @Weather
         </MChip>
         <MChip Class="my-2 mr-2"
-               Outlined="Mobile"
+               Outlined
                OnClick="()=>ShowMood=true">
             <MIcon Left>
                 @(GetMoodIcon(Diary.Mood))
@@ -80,7 +80,7 @@
             @Mood
         </MChip>
         <MChip Class="my-2 mr-2"
-               Outlined="Mobile"
+               Outlined
                OnClick="()=>ShowLocation=true">
             <MIcon Left>
                 mdi-map-marker-outline
