chore: Structural adjustment

--- a/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
+++ b/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
@@ -9,4 +9,4 @@
     <MProgressCircular Indeterminate
                        Size="48"></MProgressCircular>
 </div>
-<link href="css/swiper-bundle.min.css" rel="stylesheet" />
+<link href="npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
